force-app/main/default/objects/HRCFSL_Skill_Mapping__c/HRCFSL_Skill_Mapping__c.object-meta.xml
<CustomObject>
    <label>Skill Mapping</label>
    <nameField>
        <displayFormat>SK-{00000}</displayFormat>
        <label>Skill #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>