force-app/main/default/objects/HRCFSL_Skill_Mapping__c/fields/HRCFSL_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Activity_Type__c</fullName>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Activity_Type</valueSetName>
    </valueSet>
</CustomField>