force-app/main/default/objects/HRCFSL_Skill_Mapping__c/fields/HRCFSL_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Model__c</fullName>
    <label>Product Model</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>