force-app/main/default/objects/HRCFSL_Skill_Mapping__c/fields/HRCFSL_Region__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>