force-app/main/default/objects/HRCFSL_Skill_Mapping__c/fields/HRCFSL_Skill__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Skill__c</fullName>
    <label>Skill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>