force-app/main/default/objects/HRCFSL_Skill_Mapping__c/fields/HRCFSL_Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Skill_Id__c</fullName>
    <description>Salesforce Id of the Selected Skill</description>
    <label>Skill Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>