force-app/main/default/objects/HRCFSL_Skill_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HRCFSL_Region__c</columns>
    <columns>HRCFSL_Skill__c</columns>
    <columns>HRCFSL_Product_Model__c</columns>
    <columns>HRCFSL_Activity_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>